2008-08-07  Stefan Kost  <ensonic@users.sf.net>

	* ext/jack/gstjackaudiosrc.c:
	  Try committing this once again. Now properly renamed.

2008-08-07  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* docs/plugins/gst-plugins-bad-plugins.args:
	* docs/plugins/gst-plugins-bad-plugins.hierarchy:
	* docs/plugins/gst-plugins-bad-plugins.interfaces:
	* docs/plugins/gst-plugins-bad-plugins.prerequisites:
	* docs/plugins/inspect/plugin-jack.xml
	  Add new element to docs.

	* ext/jack/gstjack.h
	  Add missing file.

	* ext/jack/gstjackaudiosrc.c:
	* ext/jack/gstjackaudiosrc.h:
	  Rename jackaudiosrc to jack_audio_src.

2008-08-07  Stefan Kost  <ensonic@users.sf.net>

	patch by: Tristan Matthews <tristan@sat.qc.ca>

	* ext/jack/Makefile.am:
	* ext/jack/gstjack.c:
	* ext/jack/gstjackaudioclient.c:
	* ext/jack/gstjackaudiosink.c:
	* ext/jack/gstjackaudiosink.h:
	* ext/jack/gstjackaudiosrc.c:
	* ext/jack/gstjackaudiosrc.h:
	* ext/jack/gstjackringbuffer.h:
	  Add a jackaudiosrc. Refactor sink slightly for better code reuse.
	  Fixes #545197.

2008-08-06  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* docs/plugins/gst-plugins-bad-plugins.args:
	* docs/plugins/gst-plugins-bad-plugins.hierarchy:
	* docs/plugins/gst-plugins-bad-plugins.interfaces:
	* docs/plugins/gst-plugins-bad-plugins.prerequisites:
	* docs/plugins/inspect/plugin-celt.xml:
	* docs/plugins/inspect/plugin-twolame.xml:
	Add twolame and celt plugins to the docs.

2008-08-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	Based on patch by: Olivier Crete <tester at tester dot ca>

	* gst/rtpmanager/gstrtpjitterbuffer.c:
	(gst_rtp_jitter_buffer_chain), (gst_rtp_jitter_buffer_loop):
	Make the buffer metadata writable before inserting it in the